@@ -19,8 +19,12 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.2.0 (2018-02-??)
 ------------------
+- ALL: een 0-factuur kon bij een aantal shops leiden tot een onterechte
+  waarschuwing en dus een concept-factuur. Deze situatie wordt nu beter
+  aangepakt waardoor de waarschuwing niet meer gegeven zal worden.
 - ALL: Als je vanaf nu een factuur opnieuw en geforceerd verstuurd, zal de oude
-  boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail.
+  boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail. Ook de
+  waarschuwing bij geforceerd verzenden is aangepast.
 - ALL: meerdere spelfouten uit de NL en EN vertalingen gehaald.
 - ALL: fouten en waarschuwingen van een ander API request (vooralsnog opvragen
   btw tarieven en verwijderen oude entry) worden toegvoegd aan het
